border for logins starting with a

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -10,3 +10,9 @@
   }
 }
 
+.startsWithA {
+  border: 3px solid #0bc019;
+  border-radius: 5px;
+  box-shadow: 0 2px 7px rgba(0,0,0,0.4), 0 1px 0 rgba(255,255,255,0.2) inset;
+}
+
